JB-1 - first draft of candidates API
